--- a/html/styles/main.css
+++ b/html/styles/main.css
@@ -17,472 +17,487 @@ Tags: error, error page, creative, clean, modern, minimal, animated, responsive,
 /* ------------------------------------------ */
 html,
 body {
-    position: relative;
+	position: relative;
 
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 
-    text-align: center;
+	text-align: center;
 
-    color: rgba(255, 255, 255, 1);
-    background-color: rgba(24, 25, 30, 1);
+	color: rgba(255, 255, 255, 1);
+	background-color: rgba(24, 25, 30, 1);
 
-    font-family: "Lucida Console", Monaco, monospace;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 22px;
+	font-family: "Lucida Console", Monaco, monospace;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 22px;
 }
 .eyes,
 .eyes canvas {
-    max-width: 100%;
+	max-width: 100%;
 }
 .error {
-    box-sizing: border-box;
-    padding: 15px;
+	box-sizing: border-box;
+	padding: 15px;
 }
 .error__heading {
-    margin: 0;
+	margin: 0;
 
-    font-size: 26px;
-    line-height: 1.3;
+	font-size: 26px;
+	line-height: 1.3;
 }
 .error__heading span {
-    display: block;
+	display: block;
 
-    font-size: 60px;
+	font-size: 60px;
 }
 .error__description {
-    display: block;
+	display: block;
 
-    margin-bottom: 15px;
+	margin-bottom: 15px;
 
-    line-height: 1.7;
+	line-height: 1.7;
 }
 .error__button {
-    display: block;
+	display: block;
 
-    box-sizing: border-box;
-    width: 100%;
-    margin: 15px auto;
-    padding: 0 10px;
+	box-sizing: border-box;
+	width: 100%;
+	margin: 15px auto;
+	padding: 0 10px;
 
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
 
-    color: rgba(255, 255, 255, 1);
-    border: none;
-    border-radius: 3px;
-    outline: none;
-    background-color: rgba(141, 73, 107, 1);
+	color: rgba(255, 255, 255, 1);
+	border: none;
+	border-radius: 3px;
+	outline: none;
+	background-color: rgba(141, 73, 107, 1);
 
-    font-size: 18px;
-    line-height: 55px;
+	font-size: 18px;
+	line-height: 55px;
 }
 .error__button:hover {
-    background-color: rgba(141, 73, 107, 0.6);
+	background-color: rgba(141, 73, 107, 0.6);
 }
 .error__button:active {
-    background-color: rgba(141, 73, 107, 0.4);
+	background-color: rgba(141, 73, 107, 0.4);
 }
 .error__socials {
-    margin-top: 20px;
+	margin-top: 20px;
 }
 .error__social {
-    margin: 0 10px;
+	margin: 0 10px;
 
-    text-decoration: none;
+	text-decoration: none;
 
-    opacity: 1;
-    color: rgba(255, 255, 255, 1);
+	opacity: 1;
+	color: rgba(255, 255, 255, 1);
 
-    font-size: 24px;
+	font-size: 24px;
 }
 .error__social:hover {
-    color: rgba(141, 73, 107, 1);
+	color: rgba(141, 73, 107, 1);
 }
 .error__social:active {
-    color: rgba(141, 73, 107, 0.6);
+	color: rgba(141, 73, 107, 0.6);
 }
 @media (min-width: 960px) {
-    body {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
+	body {
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display:         flex;
 
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-            -ms-flex-align: center;
-                align-items: center;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-            -ms-flex-pack: center;
-                justify-content: center;
-    }
-    .eyes,
-    .error {
-        width: 50%;
-    }
-    .error__heading {
-        font-size: 40px;
-    }
-    .error__heading span {
-        font-size: 70px;
-    }
-    .error__buttons {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
+		-webkit-box-align: center;
+		-webkit-align-items: center;
+		-ms-flex-align: center;
+		        align-items: center;
+		-webkit-box-pack: center;
+		-webkit-justify-content: center;
+		-ms-flex-pack: center;
+		        justify-content: center;
+	}
+	.eyes,
+	.error {
+		width: 50%;
+	}
+	.error__heading {
+		font-size: 40px;
+	}
+	.error__heading span {
+		font-size: 70px;
+	}
+	.error__buttons {
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display:         flex;
 
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-            -ms-flex-align: center;
-                align-items: center;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-            -ms-flex-pack: center;
-                justify-content: center;
-    }
-    .error__button:first-child {
-        margin-right: 15px;
-    }
+		-webkit-box-align: center;
+		-webkit-align-items: center;
+		-ms-flex-align: center;
+		        align-items: center;
+		-webkit-box-pack: center;
+		-webkit-justify-content: center;
+		-ms-flex-pack: center;
+		        justify-content: center;
+	}
+	.error__button:first-child {
+		margin-right: 15px;
+	}
 }
 @media (min-width: 1600px) {
-    body {
-        padding: 0 20%;
-    }
+	body {
+		padding: 0 20%;
+	}
 }
 
 /* ------------------------------------------ */
 /*             02 - MODAL BOX
 /* ------------------------------------------ */
 .modal {
-    position: fixed;
-    z-index: 50;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+	position: fixed;
+	z-index: 50;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 
-    display: -webkit-flex;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    visibility: hidden;
+	display: -webkit-flex;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display:         flex;
+	visibility: hidden;
 
-    box-sizing: border-box;
-    width: 100%;
-    margin: auto;
+	box-sizing: border-box;
+	width: 100%;
+	margin: auto;
 
-    text-align: center;
+	text-align: center;
 
-    color: rgba(24, 25, 30, 1);
+	color: rgba(24, 25, 30, 1);
 
-    -webkit-align-items: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -moz-box-align: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -moz-box-pack: center;
-    -ms-flex-pack: center;
+	-webkit-align-items: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	        align-items: center;
+	   -moz-box-align: center;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	        justify-content: center;
+	   -moz-box-pack: center;
+	-ms-flex-pack: center;
 }
 .modal__box {
-    display: block;
+	display: block;
 
-    text-align: center;
-    vertical-align: middle;
+	text-align: center;
+	vertical-align: middle;
 }
 .modal__inset {
-    position: relative;
+	position: relative;
 
-    visibility: hidden;
+	visibility: hidden;
 
-    box-sizing: border-box;
-    min-height: 126px;
-    margin: auto;
-    padding: 40px;
+	box-sizing: border-box;
+	min-height: 126px;
+	margin: auto;
+	padding: 40px;
 
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+	-webkit-transform: translate3d(0, 0, 0);
+	        transform: translate3d(0, 0, 0);
 
-    background-color: rgba(255, 255, 255, 1);
-    box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
+	background-color: rgba(255, 255, 255, 1);
+	box-shadow: 2px 2px 8px 1px rgba(0, 0, 0, 0.2);
 
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
+	-webkit-backface-visibility: hidden;
+	        backface-visibility: hidden;
+	-webkit-transform-style: preserve-3d;
+	        transform-style: preserve-3d;
 }
 .modal__inset .modal__close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+	position: absolute;
+	top: 10px;
+	right: 10px;
 
-    display: block;
+	display: block;
 
-    padding: 10px;
+	padding: 10px;
 
-    cursor: pointer;
+	cursor: pointer;
 
-    opacity: .4;
+	opacity: 0.4;
 }
 .modal__inset .modal__close:hover {
-    opacity: 1;
+	opacity: 1;
 }
 .modal__content {
-    margin: auto;
+	margin: auto;
 
-    -webkit-transition-delay: 0.1s;
-    transition-delay: 0.1s;
-    -webkit-transition-duration: 0.25s;
-    transition-duration: 0.25s;
-    -webkit-transition-property: opacity, -webkit-transform;
-    transition-property: opacity, -webkit-transform;
-    transition-property: opacity, transform;
-    transition-property: opacity, transform, -webkit-transform;
-    -webkit-transform: translateY(0) scale(0.8, 0.8);
-    transform: translateY(0) scale(0.8, 0.8);
+	-webkit-transition-delay: 0.1s;
+	        transition-delay: 0.1s;
+	-webkit-transition-duration: 0.25s;
+	        transition-duration: 0.25s;
+	-webkit-transition-property: opacity, -webkit-transform;
+	        transition-property: opacity, -webkit-transform;
+	        transition-property: opacity, transform;
+	        transition-property: opacity, transform, -webkit-transform;
+	-webkit-transform: translateY(0) scale(0.8, 0.8);
+	        transform: translateY(0) scale(0.8, 0.8);
 
-    opacity: 0;
+	opacity: 0;
 }
 .modal__content h2 {
-    display: block;
+	display: block;
 
-    padding-bottom: 22px;
+	text-align: center;
+	text-transform: uppercase;
 
-    text-align: center;
-    text-transform: uppercase;
+	color: rgba(141, 73, 107, 1);
 
-    color: rgba(141, 73, 107, 1);
-
-    font-size: 30px;
-    font-weight: 700;
-    ;
+	font-size: 30px;
+	font-weight: 700;
+	;
 }
 .modal__content small {
-    opacity: .3;
+	opacity: 0.3;
 
-    font-size: 12px;
+	font-size: 12px;
 }
 .modal__form {
-    width: 100%;
+	width: 100%;
 }
-.modal__form input {
-    box-sizing: border-box;
-    width: 100%;
-    margin-bottom: 15px;
-    padding: 15px;
+.modal__form--success .modal__content-item {
+	display: none;
+}
+.modal__form--success .modal__content-item--success {
+	display: block;
 
-    border: 2px solid rgba(24, 25, 30, 1);
-    border-radius: 3px;
+	padding-bottom: 20px;
 
-    font-size: 12px;
+	text-transform: uppercase;
+
+	font-size: 22px;
+}
+.modal__content-item input {
+	box-sizing: border-box;
+	width: 100%;
+	margin-bottom: 15px;
+	padding: 15px;
+
+	border: 2px solid rgba(24, 25, 30, 1);
+	border-radius: 3px;
+
+	font-size: 12px;
 }
 .modal__form textarea {
-    box-sizing: border-box;
-    width: 100%;
-    max-width: 100%;
-    height: 150px;
-    max-height: 70vh;
-    margin-bottom: 15px;
-    padding: 15px;
+	box-sizing: border-box;
+	width: 100%;
+	max-width: 100%;
+	height: 150px;
+	max-height: 70vh;
+	margin-bottom: 15px;
+	padding: 15px;
 
-    border: 2px solid rgba(24, 25, 30, 1);
-    border-radius: 3px;
+	border: 2px solid rgba(24, 25, 30, 1);
+	border-radius: 3px;
 
-    font-size: 12px;
+	font-size: 12px;
 }
 .modal__form input:focus,
 .modal__form textarea:focus,
 .modal__form input:hover,
 .modal__form textarea:hover {
-    border: 2px solid rgba(141, 73, 107, 1);
-    outline: none;
+	border: 2px solid rgba(141, 73, 107, 1);
+	outline: none;
 }
 .modal__form button {
-    box-sizing: border-box;
-    width: 100%;
-    margin: 0 0 15px;
-    padding: 15px;
+	box-sizing: border-box;
+	width: 100%;
+	margin: 0 0 15px;
+	padding: 15px;
 
-    border: 2px solid rgba(24, 25, 30, 1);
-    border-radius: 3px;
-    background: transparent;
+	border: 2px solid rgba(24, 25, 30, 1);
+	border-radius: 3px;
+	background: transparent;
 
-    font-size: 14px;
+	font-size: 14px;
 }
 .modal__form button:hover {
-    border: 2px solid rgba(141, 73, 107, 1);
+	border: 2px solid rgba(141, 73, 107, 1);
 }
 .modal__form button:active {
-    color: rgba(24, 25, 30, 1);
+	color: rgba(24, 25, 30, 1);
 }
+.modal__content-error-description {
+	margin-bottom: 10px;
+}
+
+
 .modal-overlay {
-    position: absolute;
-    z-index: 40;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+	position: absolute;
+	z-index: 40;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 
-    visibility: hidden;
+	visibility: hidden;
 
-    margin: auto;
+	margin: auto;
 
-    -webkit-transition: opacity 0.25s ease, visibility 0.35s linear;
-    -webkit-transition: opacity 0.25s ease 0s, visibility 0.35s linear;
-    transition: opacity 0.25s ease 0s, visibility 0.35s linear;
-    -webkit-transition-delay: 0s, 0s;
+	-webkit-transition: opacity 0.25s ease, visibility 0.35s linear;
+	-webkit-transition: opacity 0.25s ease 0s, visibility 0.35s linear;
+	        transition: opacity 0.25s ease 0s, visibility 0.35s linear;
+	-webkit-transition-delay: 0s, 0s;
 
-    opacity: 0;
-    background-color: rgba(255, 255, 255, 1);
+	opacity: 0;
+	background-color: rgba(255, 255, 255, 1);
 }
 .modal-overlay.modal--show {
-    /*opacity: .1;*/
-    visibility: visible;
+	/*opacity: .1;*/
+	visibility: visible;
 
-    -webkit-transition-delay: 0s;
-    transition-delay: 0s;
-    -webkit-transition-duration: 0.2s, 0s;
-    transition-duration: 0.2s, 0s;
+	-webkit-transition-delay: 0s;
+	        transition-delay: 0s;
+	-webkit-transition-duration: 0.2s, 0s;
+	        transition-duration: 0.2s, 0s;
 }
 .modal.modal--appear {
-    visibility: visible;
+	visibility: visible;
 }
 .modal.modal--appear .modal__inset {
-    visibility: visible;
+	visibility: visible;
 
-    -webkit-animation: modalComeIn 0.25s ease;
-    animation: modalComeIn 0.25s ease;
+	-webkit-animation: modalComeIn 0.25s ease;
+	        animation: modalComeIn 0.25s ease;
 }
 .modal.modal--appear .modal__content {
-    -webkit-transform: translateY(0) scale(1, 1);
-    transform: translateY(0) scale(1, 1);
+	-webkit-transform: translateY(0) scale(1, 1);
+	        transform: translateY(0) scale(1, 1);
 
-    opacity: 1;
+	opacity: 1;
 }
 .modal.modal--leave {
-    visibility: visible;
+	visibility: visible;
 }
 .modal.modal--leave .modal__inset {
-    visibility: visible;
+	visibility: visible;
 
-    -webkit-animation: modalHeadOut 0.35s ease 0.1s;
-    animation: modalHeadOut 0.35s ease 0.1s;
+	-webkit-animation: modalHeadOut 0.35s ease 0.1s;
+	        animation: modalHeadOut 0.35s ease 0.1s;
 }
 .modal.modal--leave .modal__content {
-    -webkit-transition-delay: 0s;
-    transition-delay: 0s;
-    -webkit-transition-timing-function: ease;
-    transition-timing-function: ease;
-    -webkit-transition-duration: 0.35s;
-    transition-duration: 0.35s;
-    -webkit-transform: translateY(25px);
-    transform: translateY(25px);
+	-webkit-transition-delay: 0s;
+	        transition-delay: 0s;
+	-webkit-transition-timing-function: ease;
+	        transition-timing-function: ease;
+	-webkit-transition-duration: 0.35s;
+	        transition-duration: 0.35s;
+	-webkit-transform: translateY(25px);
+	        transform: translateY(25px);
 
-    opacity: 0;
+	opacity: 0;
 }
 @-moz-document url-prefix() {
-    .modal {
-        height: calc(100% - 55px);
-    }
+	.modal {
+		height: calc(100% - 55px);
+	}
 }
 @media (min-width: 960px) {
-    .modal__inset {
-        min-width: 320px;
-        max-width: 550px;
-    }
+	.modal__inset {
+		min-width: 320px;
+		max-width: 550px;
+	}
 }
 
 /* ------------------------------------------ */
 /*             03 - ANIMATIONS
 /* ------------------------------------------ */
 @-webkit-keyframes modalComeIn {
-    0% {
-        visibility: hidden;
+	0% {
+		visibility: hidden;
 
-        -webkit-transform: scale(0.8, 0.8);
-        transform: scale(0.8, 0.8);
+		-webkit-transform: scale(0.8, 0.8);
+		        transform: scale(0.8, 0.8);
 
-        opacity: 0;
-    }
-    65.5% {
-        -webkit-transform: scale(1.03, 1.03);
-        transform: scale(1.03, 1.03);
-    }
-    100% {
-        visibility: visible;
+		opacity: 0;
+	}
+	65.5% {
+		-webkit-transform: scale(1.03, 1.03);
+		        transform: scale(1.03, 1.03);
+	}
+	100% {
+		visibility: visible;
 
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
+		-webkit-transform: scale(1, 1);
+		        transform: scale(1, 1);
 
-        opacity: 1;
-    }
+		opacity: 1;
+	}
 }
 @keyframes modalComeIn {
-    0% {
-        visibility: hidden;
+	0% {
+		visibility: hidden;
 
-        -webkit-transform: scale(0.8, 0.8);
-        transform: scale(0.8, 0.8);
+		-webkit-transform: scale(0.8, 0.8);
+		        transform: scale(0.8, 0.8);
 
-        opacity: 0;
-    }
-    65.5% {
-        -webkit-transform: scale(1.03, 1.03);
-        transform: scale(1.03, 1.03);
-    }
-    100% {
-        visibility: visible;
+		opacity: 0;
+	}
+	65.5% {
+		-webkit-transform: scale(1.03, 1.03);
+		        transform: scale(1.03, 1.03);
+	}
+	100% {
+		visibility: visible;
 
-        -webkit-transform: scale(1, 1);
-        transform: scale(1, 1);
+		-webkit-transform: scale(1, 1);
+		        transform: scale(1, 1);
 
-        opacity: 1;
-    }
+		opacity: 1;
+	}
 }
 @-webkit-keyframes modalHeadOut {
-    0% {
-        visibility: visible;
+	0% {
+		visibility: visible;
 
-        -webkit-transform: translateY(0) scale(1, 1);
-        transform: translateY(0) scale(1, 1);
+		-webkit-transform: translateY(0) scale(1, 1);
+		        transform: translateY(0) scale(1, 1);
 
-        opacity: 1;
-    }
-    100% {
-        visibility: hidden;
+		opacity: 1;
+	}
+	100% {
+		visibility: hidden;
 
-        -webkit-transform: translateY(35px) scale(0.97, 0.97);
-        transform: translateY(35px) scale(0.97, 0.97);
+		-webkit-transform: translateY(35px) scale(0.97, 0.97);
+		        transform: translateY(35px) scale(0.97, 0.97);
 
-        opacity: 0;
-    }
+		opacity: 0;
+	}
 }
 @keyframes modalHeadOut {
-    0% {
-        visibility: visible;
+	0% {
+		visibility: visible;
 
-        -webkit-transform: translateY(0) scale(1, 1);
-        transform: translateY(0) scale(1, 1);
+		-webkit-transform: translateY(0) scale(1, 1);
+		        transform: translateY(0) scale(1, 1);
 
-        opacity: 1;
-    }
-    100% {
-        visibility: hidden;
+		opacity: 1;
+	}
+	100% {
+		visibility: hidden;
 
-        -webkit-transform: translateY(35px) scale(0.97, 0.97);
-        transform: translateY(35px) scale(0.97, 0.97);
+		-webkit-transform: translateY(35px) scale(0.97, 0.97);
+		        transform: translateY(35px) scale(0.97, 0.97);
 
-        opacity: 0;
-    }
+		opacity: 0;
+	}
 }
